# grower

./: README.md
.github/workflows/: rust.yml
grower-js/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
grower-js/src/: grower.ts  index.ts  jsni.ts  sys.ts  types.ts
grower-rs/: .gitignore  Cargo.toml  README.md
grower-rs/crates/grower-jsni/: Cargo.toml
grower-rs/crates/grower-jsni/src/: lib.rs
grower-rs/crates/jsni/: Cargo.toml
grower-rs/src/: lib.rs
