
[package]
name = "grower"
version = "0.0.7"
edition = "2021"
authors = ["itsu-dev"]
description = "A Library for development language runtimes that run on Web Browsers."
documentation = "https://github.com/Tsukuba-Programming-Lab/grower"
license = "MIT"

[dependencies]
jsni = { package = "grower-jsni", version = "0.0.7" }
