[package]
name = "grower-jsni"
version = "0.0.3"
edition = "2021"
authors = ["itsu-dev"]
description = "A Library for development language runtimes that run on Web Browsers."
documentation = "https://github.com/Tsukuba-Programming-Lab/grower"
license = "MIT"

[dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.45"
